--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/Yash-Khadse/Educatumy-Backend/issues"
   },
-  "homepage": "https://github.com/Yash-Khadse/Educatumy-Backend#readme"
+  "homepage": "https://github.com/Yash-Khadse/Educatumy-Backend#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.14.1",
+    "nodemailer": "^7.0.2"
+  }
 }
